5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1756_762.log
== TEST (2019-05-28 23:25:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str("data por extenso: (ddmmaaaa)")

dd = t[:1]
aaaa = t[-4]
m = t - (dd + aaaa)
mm = vet_mes[m]
print(dd, "de", mm, "de", aaaa )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:26:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str("data por extenso: (ddmmaaaa)")

dd = t[:1]
aaaa = t[-4]
m = t[2] + t[3]
mm = vet_mes[m]
print(dd, "de", mm, "de", aaaa )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:27:39) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str("data por extenso: (ddmmaaaa)")

dd = t[:1]
aaaa = t[-4]
m = t[2] + t[3]
print(m)
mm = vet_mes[m]
print(dd, "de", mm, "de", aaaa )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:27:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str("data por extenso: (ddmmaaaa)")

dd = t[:1]
aaaa = t[-4]
m = t[2] + t[3]
print(m)
print(dd, "de", mm, "de", aaaa )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:28:11) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str("data por extenso: (ddmmaaaa)")

dd = t[:1]
aaaa = t[-4]
m = t[2] + t[3]
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:28:30) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str(input("data por extenso: (ddmmaaaa)"))

dd = t[:1]
aaaa = t[-4]
m = t[2] + t[3]
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:31:08) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3]) - 1
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:31:40) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n-1]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:32:13) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:33:04) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(int(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
File "XXXX", line 5
    t = str(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:33:32) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
t = str(input("data por extenso: (ddmmaaaa) "))
vet_mes = array(int(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
					 
dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
File "XXXX", line 6
    dd = t[:1]
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:33:48) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
t = str(input("data por extenso: (ddmmaaaa) "))
vet_mes = array(eval(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
File "XXXX", line 6
    dd = t[:1]
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:34:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
t = str(input("data por extenso: (ddmmaaaa) "))
vet_mes = array(eval(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

d = t[:1]
a = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
File "XXXX", line 6
    d = t[:1]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:35:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:35:08) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:38:34) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(int['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:39:28) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[n]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:39:50) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[2] + t[3])
mm = vet_mes[1]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:40:35) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = (t[1] + t[2])
mm = vet_mes[n]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:41:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = int(t[1] + t[2])
mm = vet_mes[n]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:41:19) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = int(t[1] + t[2])
mm = vet_mes[n]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:41:28) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4]
n = int(t[1] + t[2])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:41:50) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4:]
n = int(t[1] + t[2])
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:42:44) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4:]
n = int(t[2] + t[3])
n = n - 1
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:43:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:1]
aaaa = t[-4:]
n = int(t[2] + t[3])
n = n - 1
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:44:22) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:2]
aaaa = t[-4:]
n = int(t[2] + t[3])
n = n - 1
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:44:32) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
t = str(input("data por extenso: (ddmmaaaa) "))

dd = t[:2]
aaaa = t[-4:]
n = int(t[2] + t[3])
n = n - 1
mm = vet_mes[n]
print(dd, "de", mm, "de", aaaa )
-- EXECUTION TIME:
0.413056
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
